--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,5 @@ bootstrap4/* linguist-vendored
 bootstrap5/* linguist-vendored
 fontawesome/* linguist-vendored
 chart/* linguist-vendored
-css/* linguist-vendored
-estilos/* linguist-vendored
-js/* linguist-vendored
 loader/* linguist-vendored
+# He BORRADO las líneas de 'css' y 'estilos' para que cuenten en la barra
