--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,5 @@ bootstrap4/* linguist-vendored
 bootstrap5/* linguist-vendored
 fontawesome/* linguist-vendored
 chart/* linguist-vendored
+js/* linguist-vendored
 loader/* linguist-vendored
