--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@ fontawesome/* linguist-vendored
 chart/* linguist-vendored
 js/* linguist-vendored
 loader/* linguist-vendored
+estilos/* linguist-vendored
