--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@ bootstrap4/* linguist-vendored
 bootstrap5/* linguist-vendored
 fontawesome/* linguist-vendored
 chart/* linguist-vendored
+css/* linguist-vendored
+estilos/* linguist-vendored
 js/* linguist-vendored
 loader/* linguist-vendored
-estilos/* linguist-vendored
